--- a/source/html/index.html
+++ b/source/html/index.html
@@ -7,27 +7,27 @@
     <link href="vendor/css/font-awesome.min.css" rel="stylesheet">
     <link href="vendor/css/themify-icons.css" rel="stylesheet">
 
-    <link href='css/wi-button.css' rel='stylesheet'>
-    <link href='css/wi-dropdown.css' rel='stylesheet'>
-    <link href='css/wi-list.css' rel='stylesheet'>
-    <link href='css/wi-status-bar.css' rel='stylesheet'>
-    <link href='css/wi-tab.css' rel='stylesheet'>
-    <link href='css/wi-toolbar.css' rel='stylesheet'>
-    <link href='css/wi-treeview.css' rel='stylesheet'>
-    <link href='css/wi-slidingbar.css' rel='stylesheet'>
-
-    <link href='css/wi-logplot.css' rel='stylesheet'>
-    <link href='css/wi-d3.css' rel='stylesheet'>
-    <link href='css/wi-workingtabs.css' rel='stylesheet'>
-
-    <link href='css/graph.css' rel='stylesheet'>
-    <link href='css/main.css' rel='stylesheet'>
-
     <link rel="stylesheet" href="css/sprite_16.css">
     <link rel="stylesheet" href="css/sprite_32.css">
 
     <link rel='stylesheet' href='vendor/css/goldenlayout-base.css'>
     <link type="text/css" rel="stylesheet" href="vendor/css/goldenlayout-light-theme.css" />
+
+    <link href='css/wi-button.css' rel='stylesheet'>
+    <link href='css/wi-dropdown.css' rel='stylesheet'>
+    <link href='css/wi-toolbar.css' rel='stylesheet'>
+    <link href='css/wi-list.css' rel='stylesheet'>
+    <link href='css/wi-treeview.css' rel='stylesheet'>
+    <link href='css/wi-status-bar.css' rel='stylesheet'>
+    <link href='css/wi-slidingbar.css' rel='stylesheet'>
+
+    <link href='css/wi-logplot.css' rel='stylesheet'>
+    <link href='css/wi-d3.css' rel='stylesheet'>
+    <link href='css/wi-workingtabs.css' rel='stylesheet'>
+    <link href='css/wi-explorer.css' rel='stylesheet'>
+
+    <link href='css/graph.css' rel='stylesheet'>
+    <link href='css/main.css' rel='stylesheet'>
 
     <script src="vendor/js/jquery.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
@@ -36,6 +36,7 @@
     <script src='vendor/js/goldenlayout.min.js'></script>
     <script src='vendor/js/d3.min.js'></script>
     <script src='vendor/js/ResizeSensor.js'></script>
+
     <script src="js/main.js.bundle.js"></script>
 </head>
 <body ng-app='wiapp'>
@@ -54,30 +55,7 @@
     </div>
 
     <template id='explorer-block'>
-        <div class="explorer-block">
-            <wi-toolbar name="Toolbar" label="" icon="">
-                <wi-button name="Button1Button" label="" icon="help-16x16" handler="handlers.Button1ButtonClicked">
-
-                </wi-button>
-                <wi-button name="Button2Button" label="" icon="info-frp-16x16" handler="handlers.Button2ButtonClicked">
-
-                </wi-button>
-                <wi-button name="Button3Button" label="" icon="project-new-16x16" handler="handlers.Button3ButtonClicked">
-
-                </wi-button>
-
-            </wi-toolbar>
-            <div class="filter-block">
-                <span>Filter: </span>
-                <input type="text" placeholder="well or .../dataset or .../curve or ...">
-            </div>
-
-            <div class="treeview-header">
-                <span>Name</span>
-                <span class="header-description">Unit</span>
-            </div>
-            <wi-treeview config="myConfig"></wi-treeview>
-        </div>
+        <wi-explorer name="WiExplorer" tree-config="myTreeviewConfig"></wi-explorer>
     </template>
 
     <template id='property-block'>
