--- a/source/dialogs/new-project/new-project-modal.html
+++ b/source/dialogs/new-project/new-project-modal.html
@@ -11,10 +11,10 @@
                 <div class="">
                     <form class="form-horizontal" action="" name="modalNewProject">
                         <div class="form-group">
-                          <label class="control-label col-sm-3" for="projectName">Project name:</label>
+                          <label class="control-label col-sm-3" for="name">Project name:</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" value="" id="projectName" name="projectName" ng-model="projectName" required>
-                            <span ng-show ="modalNewProject.projectName.$dirty && modalNewProject.projectName.$error.required">Required*</span>
+                            <input type="text" class="form-control" value="" id="name" name="name" ng-model="name" required>
+                            <span ng-show ="modalNewProject.name.$dirty && modalNewProject.name.$error.required">Required*</span>
                           </div>
                         </div>
                         <div class="form-group">
@@ -38,7 +38,7 @@
                         <div class="form-group">
                           <label class="control-label col-sm-3" for="descriptions">Descriptions:</label>
                           <div class="col-sm-9">
-                            <textarea class="form-control" rows="8" value="" id="descriptions" name="descriptions" ng-model="descriptions"></textarea>
+                            <textarea class="form-control" rows="8" value="" id="description" name="description" ng-model="description"></textarea>
                           </div>
                         </div>
                       </form>
