--- a/source/dialogs/open-project/open-project-modal.html
+++ b/source/dialogs/open-project/open-project-modal.html
@@ -63,8 +63,14 @@
                 <p class="dialog-error" ng-if="wiModal.error">Error: {{wiModal.error}}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default" ng-disabled="!modalOpenProject.$dirty || (modalOpenProject.$dirty && modalOpenProject.$invalid)"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default" data-dismiss="modal"><span class="cancel-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default"
+                        ng-disabled="!modalOpenProject.$dirty || (modalOpenProject.$dirty && modalOpenProject.$invalid)">
+                    <span class="ok-16x16"></span>&nbsp;OK
+                </button>
+                <button type="button" class="btn btn-default"
+                        ng-click="wiModal.onCancelButtonClicked()"
+                        data-dismiss="modal"><span class="cancel-16x16"></span>&nbsp;Cancel
+                </button>
             </div>
         </div>
     </div>
