--- a/source/dialogs/add-new/add-new-modal.html
+++ b/source/dialogs/add-new/add-new-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
 
-                <button type="button" class="close" ng-click="wiModal.close('Cancel')" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" data-dismiss="modal" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="well-marker-add-32x32"></span>&nbsp;Create New Well</h4>
                 <h5 class="modal-infomation-title">&nbsp;Well Infomation</h5>
 
@@ -12,10 +12,10 @@
                 <div class="">
                     <form class="form-horizontal" action="" name="modalAddNew">
                         <div class="form-group">
-                          <label class="control-label col-sm-3" for="wellName">Well name:</label>
+                          <label class="control-label col-sm-3" for="name">Well name:</label>
                           <div class="col-sm-9">
-                            <input type="text" class="form-control" value="" id="wellName" name="wellName" ng-model="wellName" required>
-                            <span ng-show ="modalAddNew.wellName.$dirty && modalAddNew.wellName.$error.required">Required*</span>
+                            <input type="text" class="form-control" value="" id="name" name="name" ng-model="name" required>
+                            <span ng-show ="modalAddNew.name.$dirty && modalAddNew.name.$error.required">Required*</span>
                           </div>
                         </div>
             
@@ -43,8 +43,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.close(wiModal.onOK())" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
-                <button type="button" ng-click="wiModal.close('Cancel')" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
+                <button type="button" ng-click="wiModal.onOkButtonClicked();" class="btn btn-default" data-dismiss="modal"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default" data-dismiss="modal"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
     </div>
