--- a/source/dialogs/open-project/open-project-modal.html
+++ b/source/dialogs/open-project/open-project-modal.html
@@ -21,25 +21,25 @@
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="project-name">Company</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" value="" name="company" ng-model="wiModal.selectedProject.company">
+                            <input type="text" class="form-control" value="" name="company" ng-model="wiModal.selectedProject.company" disabled>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="department">Department:</label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" value="" name="department" ng-model="wiModal.selectedProject.department">
+                            <input type="text" class="form-control" value="" name="department" ng-model="wiModal.selectedProject.department" disabled>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="createAt">Create date:</label>
                         <div class="col-sm-9">
-                            <input type="datetime-local" class="form-control" value="{{ date | date: 'yyyy-MM-dd' }}" name="createAt" ng-model="wiModal.createdAt">
+                            <input type="datetime-local" class="form-control" value="{{ date | date: 'yyyy-MM-dd' }}" name="createAt" ng-model="wiModal.createdAt" disabled>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="descriptions">Descriptions:</label>
                         <div class="col-sm-9">
-                            <textarea class="form-control" rows="8" value="" name="descriptions" ng-model="wiModal.selectedProject.description"></textarea>
+                            <textarea class="form-control" rows="8" value="" name="descriptions" ng-model="wiModal.selectedProject.description" disabled></textarea>
                         </div>
                     </div>
                 </form>
