--- a/source/dialogs/line-symbol/line-symbol-modal.html
+++ b/source/dialogs/line-symbol/line-symbol-modal.html
@@ -41,7 +41,8 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-6" for="line-width">Line Width</label>
                                             <div class="col-sm-6">
-                                                <input type="number" id="line-width" min="1" max="10" class="form-control wi-form-control" ng-model="wiModal.lineOptions.lineStyle.lineWidth">
+                                                <input type="number" id="line-width" class="form-control wi-form-control"
+                                                    ng-model="wiModal.lineOptions.lineStyle.lineWidth" ng-change="wiModal.checkSize()">
                                             </div>
                                         </div>
                                     </div>
@@ -93,7 +94,8 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-6 padding-right-0">Symbol Size</label>
                                             <div class="col-sm-6">
-                                                <input type="number" id="symbol-size" min="1" max="30" class="form-control wi-form-control" ng-model="wiModal.symbolOptions.symbolStyle.symbolSize">
+                                                <input type="number" id="symbol-size" class="form-control wi-form-control"
+                                                    ng-model="wiModal.symbolOptions.symbolStyle.symbolSize" ng-change="wiModal.checkSize()">
                                             </div>
                                         </div>
                                     </div>
