--- a/source/html/index.html
+++ b/source/html/index.html
@@ -24,6 +24,8 @@
     <link rel='stylesheet' href='vendor/css/goldenlayout-base.css'>
     <link type="text/css" rel="stylesheet" href="vendor/css/goldenlayout-light-theme.css" />
 
+    <link rel='stylesheet' href='vendor/css/nouislider.min.css'>
+
     <link href='css/wi-button.css' rel='stylesheet'>
     <link href='css/wi-dropdown.css' rel='stylesheet'>
     <link href='css/wi-toolbar.css' rel='stylesheet'>
@@ -88,6 +90,7 @@
     <script type="text/javascript" src="vendor/js/lodash.js"></script>
     <script src="vendor/js/math.min.js"></script>
     <script src="vendor/js/select.js"></script>
+    <script src="vendor/js/nouislider.min.js"></script>
 
     <!--select line style && line width-->
     <script src="vendor/js/angular-sanitize.min.js"></script>
