--- a/source/dialogs/curve-properties/curve-properties-modal.html
+++ b/source/dialogs/curve-properties/curve-properties-modal.html
@@ -60,7 +60,8 @@
                                         <input type="number" class="form-control wi-form-control"
                                                 value="" id="minValue" name="minValue"
                                                 ng-model="wiModal.curveOptions.minValue"
-                                                ng-change="wiModal.curveOptions.autoValueScale = false">
+                                                ng-change="wiModal.curveOptions.autoValueScale = false"
+                                                ng-disabled="wiModal.curveOptions.autoValueScale">
                                     </div>
                                 </div>
                                 <div class="form-group">
@@ -69,7 +70,8 @@
                                         <input type="number" class="form-control wi-form-control"
                                                 value="" id="maxValue" name="maxValue"
                                                 ng-model="wiModal.curveOptions.maxValue"
-                                                ng-change="wiModal.curveOptions.autoValueScale = false">
+                                                ng-change="wiModal.curveOptions.autoValueScale = false"
+                                                ng-disabled="wiModal.curveOptions.autoValueScale">
                                     </div>
                                 </div>
                                 <label>
