--- a/source/dialogs/curve-split/curve-split-modal.html
+++ b/source/dialogs/curve-split/curve-split-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true" ng-disabled="wiModal.process">&times;</button>
-                <h4><span class="well-insight-16x16"></span>Split&nbsp;Curve</h4>
+                <h4><span class=".cureve-splice-16x16"></span>&nbsp;Split Curve</h4>
             </div>
             <div class="modal-body dialog-style">
                 <form class="form-horizontal" action="" name="modalSplitCurve">
@@ -50,14 +50,16 @@
                         <label class="col-sm-2 control-label" style="padding-right: 0">
                             Input Curve
                         </label>
-                        <div class="col-sm-4">
-                            <select name="" id=""
-                                    class="form-control wi-form-control"
-                                    ng-model="wiModal.idCurve"
-                                    ng-options="curve.id as curve.name for curve in wiModal.curves"
-                                    ng-change="wiModal.selectCurve(wiModal.idCurve)"
-                            >
-                            </select>
+                        <div class="col-sm-4"class='form-control wi-form-control'>
+                            <ui-select ng-model="wiModal.idCurve"
+                                ng-change="wiModal.selectCurve(wiModal.idCurve)"
+                                class="normal-text">
+                                <ui-select-match placeholder='Select a curve'>{{$select.selected.name}}</ui-select-match>
+                                <ui-select-choices group-by="'datasetName'"
+                                repeat='curve.id as curve in wiModal.curves | filter:{name:$select.search} track by curve.id'>
+                                    <div class="padding-left-20px">{{curve.properties.name}}</div>
+                                </ui-select-choices>
+                            </ui-select>
                         </div>
                         <label for="" class="col-sm-2 control-label" style="padding-left: 0">
                             Number Split
