--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -131,7 +131,7 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-1">
-                                        
+
                                     </div>
                                     <div class="col-sm-4">
                                         <label class="control-label col-sm-3 font-weight-normal padding-left-0">Colors</label>
@@ -196,8 +196,9 @@
                                                 Overlay Lines
                                             </label>
                                             <div class="col-sm-10 padding-left-0" style="left: -10px">
-                                                <select class="form-control wi-form-control">
-                                                    <option value="none">-------------</option>
+                                                <select class="form-control wi-form-control" ng-model="wiModal.selectedIdOverlayLine"
+                                                    ng-options="item.idOverlayLine as item.name for item in wiModal.overlayLines track by item.idOverlayLine">
+                                                    <option value="">-------------</option>
                                                 </select>
                                             </div>
                                         </div>
